--- a/snmpd.conf
+++ b/snmpd.conf
@@ -4,5 +4,5 @@ group MyRWGroup v2c        local
 group MyRWGroup usm        local
 view all    included  .1                               80
 access MyRWGroup ""      any       noauth    exact  all    all    none
-syslocation Bogor, Indonesia
-syscontact Root <admin@mastahit.com>
+syslocation Kuala_Lumpur, Malaysia
+syscontact Root <syahz86@yahoo.com>
